# unified-device-gateway

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
.sisyphus/: boulder.json
.sisyphus/plans/: udg-implementation.md
docs/: DEVELOPMENT.md  FEATURES.md  MAPPING.md  adb.txt  hdc.txt  ios.txt
docs/plans/: 2026-04-23-device-interface-refactor.md  2026-04-27-w3c-webdriver-client-design.md
tests/: conftest.py  test_device_manager.py  test_serial_device.py  test_webdriver.py
udg/: __main__.py  cli.py  config.py
udg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
udg/api/: device.proto  device_pb2.py  device_pb2_grpc.py  schemas.py
udg/auth/: token.py
udg/device/: __init__.py  android.py  base.py  harmonyos.py  ios.py  manager.py  serial.py
udg/executor/: runner.py
udg/scanner/: device_scanner.py  serial_scanner.py
udg/server/: app.py  grpc.py  http.py  mcp.py
udg/storage/: __init__.py
udg/utils/: cmd.py  logging.py  metrics.py
w3c/webdriver/: __init__.py  client.py  errors.py  types.py
